--- a/sipXdigium/etc/digium/digium.xml.vm
+++ b/sipXdigium/etc/digium/digium.xml.vm
@@ -77,6 +77,32 @@
   <setting id="${setting.ProfileName}" value="$!{setting.Value}"/>
   #end
 
+  <accounts>
+  #foreach ($line in $phone.lines)
+    <account
+    #set ($group = $line.getSetting('account'))
+    #foreach ($setting in $cfg.getSettings($group))
+    ${setting.ProfileName}="$!{setting.Value}"
+    #end
+    >
+      <host_primary
+      #set ($group = $line.getSetting('host_primary'))
+      #foreach ($setting in $cfg.getSettings($group))
+      ${setting.ProfileName}="$!{setting.Value}"
+      #end />
+      <host_alternate
+      #set ($group = $line.getSetting('host_secondary'))
+      #foreach ($setting in $cfg.getSettings($group))
+      ${setting.ProfileName}="$!{setting.Value}"
+      #end />
+      #set ($group = $line.getSetting('permission'))
+      #foreach ($setting in $cfg.getSettings($group))
+      <permission id="${setting.ProfileName}" value="$!{setting.Value}"/>
+      #end
+    </account>
+  #end
+  </accounts>
+
   <smart_blf>
     <blf_items url="$!{TFTPServer}${serial}-smartblf.xml" />
   </smart_blf>
