--- a/sipXdigium/etc/digium/smartblf.xml.vm
+++ b/sipXdigium/etc/digium/smartblf.xml.vm
@@ -4,9 +4,9 @@
       #foreach ($button in $cfg.SpeedDial)
       <blf_item contact_id="sd-${button.Number}">
         <behaviors>
-          <behavior phone_state="idle" press_action="regular_dial" press_function="dial" />
+          <behavior phone_state="idle" press_action="primary" press_function="dial" />
           <behavior phone_state="connected" press_action="blindxfer" press_function="transfer" />
-          <behavior phone_state="connected" press_action="vmxfer" press_function="transfer" />
+          <behavior phone_state="connected" long_press_action="send_to_vm" long_press_function="transfer" />
         </behaviors>
         <indicators>
           <indicator target_status="idle" led_color="green" led_state="on" />
