TFTPServer not being displayed correctly.

--- a/sipXdigium/etc/digium/digium.xml.vm
+++ b/sipXdigium/etc/digium/digium.xml.vm
@@ -275,8 +275,8 @@
   </keymap>
 
   <smart_blf>
-    <blf_items url="$!{TFTPServer}${serial}-smartblf.cfg" blf_contact_group="Speed Dials" />
+    <blf_items url="${TFTPServer}${serial}-smartblf.cfg" blf_contact_group="Speed Dials" />
   </smart_blf>
 
-  <contacts url="$!{TFTPServer}${serial}-directory.cfg" id="corporate" />
+  <contacts url="${TFTPServer}${serial}-directory.cfg" id="corporate" />
 </config>
