--- a/sipXdigium/etc/digium/smartblf.xml.vm
+++ b/sipXdigium/etc/digium/smartblf.xml.vm
@@ -2,7 +2,8 @@
   <smart_blf>
     <blf_items>
       #foreach ($button in $cfg.SpeedDial)
-      <blf_item contact_id="sd-${button.Number}">
+      #set ($i = $velocityCount - 1)
+      <blf_item contact_id="sd-${i}">
         <behaviors>
           <behavior phone_state="idle" press_action="primary" press_function="dial" />
           <behavior phone_state="connected" press_action="blindxfer" press_function="transfer" />
