--- a/sipXdigium/etc/digium/smartblf.xml.vm
+++ b/sipXdigium/etc/digium/smartblf.xml.vm
@@ -4,7 +4,7 @@
       #foreach ($button in $cfg.SpeedDial)
       #set ($i = $velocityCount - 1)
       #set ($index = $velocityCount)
-      <blf_item location="main" index="${index}" contact_id="sd-${i}">
+      <blf_item location="main" index="${index}" paging="1" contact_id="sd-${i}">
         <behaviors>
           <behavior phone_state="idle" press_action="primary" press_function="dial" />
           <behavior phone_state="connected" press_action="blindxfer" press_function="transfer" long_press_action="send_to_vm" long_press_function="transfer" />
